--- a/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-details/asset-details.component.html
@@ -8,99 +8,93 @@
                 <p class="text-xl font-semibold">Assets Details</p>
             </div>
         </ng-template>
-        <div class="grid grid-cols-1 md:grid-cols-12 gap-4 pt-3 h-full" [formGroup]="assetForm">
-            <div class="col-span-1 md:col-span-5 flex flex-col gap-2">
-                <div class="flex flex-col gap-5">
-                    <p-floatlabel variant="in">
-                        <input id="code" pInputText formControlName="code" 
-                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('code').invalid && formControl('code').touched }" fluid />
-                        <label for="code">Code</label>
-                    </p-floatlabel>
-                    <p-floatlabel variant="in">
-                        <input id="name" pInputText formControlName="name" 
-                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('name').invalid && formControl('name').touched }" fluid />
-                        <label for="name">Name</label>
-                    </p-floatlabel>
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-2">
-                        <p-floatlabel variant="in">
-                            <p-select id="type" [options]="assetService.filterCategory()" optionLabel="label" optionValue="value" formControlName="category" showClear fluid />
-                            <label for="type">Category</label>
-                        </p-floatlabel>
-                        <p-floatlabel variant="in">
-                            <p-select id="type" [options]="assetService.filterCategory()" optionLabel="label" optionValue="value" formControlName="subCategory" showClear fluid />
-                            <label for="type">Sub Category</label>
-                        </p-floatlabel>
-                    </div>
-                </div>
-                <div class="flex-1 overflow-auto">
-                    <p-tabs [value]="0">
-                        <p-tablist>
-                            <p-tab [value]="0">Availability</p-tab>
-                            <p-tab [value]="1">Audience Tags</p-tab>
-                        </p-tablist>
-                        <p-tabpanels>
-                            <p-tabpanel [value]="0">
-                                <div class="flex flex-col gap-4">
-                                    <div class="grid grid-cols-1 md:grid-cols-2 gap-3" formGroupName="dateRange">
-                                        <p-datepicker formControlName="start" placeholder="Start Date" [showIcon]="true" [showOnFocus]="false" appendTo="body" fluid />
-                                        <p-datepicker formControlName="end" placeholder="End Date" [showIcon]="true" [showOnFocus]="false" appendTo="body" fluid />
-                                    </div>
-                                    <div class="flex flex-col gap-4 h-[calc(100vh-600px)] overflow-y-auto p-5" formArrayName="availability">
-                                        @for (item of availability.controls; track $index) {
-                                            <div class="flex justify-between gap-3 w-full" [formGroupName]="$index">
-                                                <div class="flex gap-2 items-center">
-                                                    <p-checkbox [id]="weekdays[$index]" binary="true" formControlName="selected" />
-                                                    <label [for]="weekdays[$index]">{{ weekdays[$index] }}</label>
-                                                </div>
 
-                                                <p-datepicker formControlName="hour" [timeOnly]="true" appendTo="body" 
-                                                    [iconDisplay]="'input'" placeholder="Hour" hourFormat="12" showButtonBar showIcon>
-                                                    <ng-template #inputicon let-clickCallBack="clickCallBack">
-                                                        <i class="pi pi-clock" (click)="clickCallBack($event)"></i>
-                                                    </ng-template>
-                                                </p-datepicker>
-                                            </div>
-                                        }
-                                    </div>
-                                </div>
-                            </p-tabpanel>
-                            <p-tabpanel [value]="1">
-                                Audience
-                            </p-tabpanel>
-                        </p-tabpanels>
-                    </p-tabs>
+        <div class="flex flex-col gap-4 py-3 h-full" [formGroup]="assetForm">
+            <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+                <div class="col-span-1 md:col-span-2">
+                    <p-floatlabel variant="on">
+                        <p-select inputId="type" [options]="assetTypes()" optionLabel="label" optionValue="value" 
+                            (onChange)="onChangeType($event)" [formControl]="assetTypeControl" fluid />
+                        <label for="type">Type</label>
+                    </p-floatlabel>
                 </div>
-            </div>
-            <div class="col-span-1 md:col-span-7">
-                <div class="flex flex-col gap-4 h-full">
-                    <div class="grid grid-cols-1 md:grid-cols-2 gap-2 items-center">
-                        <p-floatlabel variant="in">
-                            <p-select id="type" [options]="assetTypes()" optionLabel="label" optionValue="value" formControlName="type" fluid />
-                            <label for="type">Type</label>
+                <div class="col-span-1 md:col-span-4 lg:col-span-6">
+                    @if (showLinkInput()) {
+                        <p-floatlabel variant="on">
+                            <input id="link" pInputText formControlName="link"
+                                [ngClass]="{ 'ng-invalid ng-dirty': formControl('link').invalid && formControl('link').touched }" fluid />
+                            <label for="link">Link</label>
                         </p-floatlabel>
-                        @if (showLinkInput()) {
-                            <p-floatlabel variant="in">
-                                <input id="link" pInputText formControlName="link" 
-                                    [ngClass]="{ 'ng-invalid ng-dirty': formControl('link').invalid && formControl('link').touched }" fluid />
-                                <label for="link">Link</label>
-                            </p-floatlabel>
-                        } @else {
+                    } @else {
+                        @if (!isEditMode()) {
                             <p-button styleClass="w-full" (onClick)="fileInput.click()" label="Upload" icon="pi pi-upload" />
-                            <input #fileInput type="file" [accept]="currentFileType() + '/*'" hidden (change)="onFileSelected($event)" [multiple]="false" />
+                            <input #fileInput type="file" accept="image/*, video/*, html/*" hidden (change)="onFileSelected($event)" [multiple]="false" />
                         }
-                    </div>
-                    <div class="flex items-center justify-center border-2 border-dashed border-gray-400 rounded-lg h-[340px] overflow-y-auto">
-                        <ng-container *ngIf="formControl('link').value as currentContent">
-                            <app-preview-content [currentContent]="{ link: formControl('link').value, type: formControl('type').value }" [showControls]="true" />
-                        </ng-container>
-                    </div>
-                    <div class="flex items-center gap-4">
-                        <label for="duration">Duration:</label>
-                        <p-inputnumber formControlName="duration" inputId="duration" [min]="0"
-                            placeholder="Duration" [useGrouping]="false" [inputStyle]="{ width: '8rem' }" showButtons />
-                    </div>
+                    }
+                </div>
+                <div class="col-span-1 md:col-span-3 lg:col-span-2">
+                    <p-button styleClass="w-full" label="Schedule" (onClick)="isShowSchedule.set(!isShowSchedule())"
+                        icon="pi pi-calendar" badge="!" badgeSeverity="danger" outlined />
+                </div>
+                <div class="col-span-1 md:col-span-3 lg:col-span-2">
+                    <p-button styleClass="w-full" label="Audience" icon="pi pi-user" outlined />
                 </div>
             </div>
+            
+            <div class="grid grid-cols-1 md:grid-cols-12 gap-4">
+                <div class="col-span-1 md:col-span-2">
+                    <p-floatlabel variant="on">
+                        <label for="code">Code</label>
+                        <input id="code" pInputText formControlName="code"
+                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('code').invalid && formControl('code').touched }" fluid />
+                    </p-floatlabel>
+                </div>
+                <div class="col-span-1 md:col-span-4 lg:col-span-6">
+                    <p-floatlabel variant="on">
+                        <label for="name">Name</label>
+                        <input id="name" pInputText formControlName="name"
+                            [ngClass]="{ 'ng-invalid ng-dirty': formControl('name').invalid && formControl('name').touched }" fluid />
+                    </p-floatlabel>
+                </div>
+                <div class="col-span-1 md:col-span-3 lg:col-span-2">
+                    <p-floatlabel variant="on">
+                        <p-select inputId="category" [options]="assetService.filterCategory()"
+                            optionLabel="label" optionValue="value" formControlName="category" showClear fluid>
+                            <ng-template #footer>
+                                <div class="p-3">
+                                    <p-button label="Add New" fluid severity="secondary" size="small" icon="pi pi-plus" text />
+                                </div>
+                            </ng-template>
+                        </p-select>
+                        <label for="category">Category</label>
+                    </p-floatlabel>
+                </div>
+                <div class="col-span-1 md:col-span-3 lg:col-span-2">
+                    <p-floatlabel variant="on">
+                        <p-select inputId="subCategory" [options]="assetService.filterSubCategory()" 
+                            optionLabel="label" optionValue="value" formControlName="subCategory" showClear fluid>
+                            <ng-template #footer>
+                                <div class="p-3">
+                                    <p-button label="Add New" fluid severity="secondary" size="small" icon="pi pi-plus" text />
+                                </div>
+                            </ng-template>
+                        </p-select>
+                        <label for="subCategory">Sub Category</label>
+                    </p-floatlabel>
+                </div>
+            </div>
+            
+            <div class="flex-1 border-2 border-dashed border-gray-400 rounded-lg relative overflow-y-auto">
+                <div class="absolute top-0 right-0 m-2 z-100">
+                    <p-button icon="pi pi-info-circle" severity="secondary" (onClick)="isShowInfo.set(true)"
+                        pTooltip="File info" tooltipPosition="bottom" rounded />
+                </div>
+                <ng-container *ngIf="formControl('link').value as currentContent">
+                    <app-preview-content class="absolute h-full w-full flex items-center justify-center"
+                        [currentContent]="assetForm.value" [showControls]="true" />
+                </ng-container>
+            </div>
+
         </div>
         <ng-template #footer>
             <div class="flex justify-end gap-2">
@@ -110,6 +104,29 @@
         </ng-template>
     </p-card>
 </div>
+
+<p-dialog header="Set Schedule" [(visible)]="isShowSchedule" [style]="{ width: '50rem' }" modal>
+    <app-asset-schedule [assetForm]="assetForm" />
+    <ng-template #footer>
+        <p-button label="Close" severity="secondary" (onClick)="onClickCloseSchedule()" />
+    </ng-template>
+</p-dialog>
+
+<p-dialog header="File Info" [(visible)]="isShowInfo" [style]="{ width: '30rem' }" closeOnEscape draggable modal>
+    <div class="flex flex-col gap-4">
+        <p>File Size: <span class="font-semibold">{{ utils.formatSize(fileDetails?.value.size) }}</span></p>
+        <div class="flex gap-2 items-center">
+            <p>File Type:</p>
+            <p-tag [value]="assetForm.value.type?.toUpperCase()" severity="info" />
+        </div>
+        <p>File Duration: <span class="font-semibold">{{ utils.timeConversion(assetForm.value.duration, true) }}</span></p>
+        <p>File Resolution: <span class="font-semibold">{{ fileDetails?.value.resolution?.width }} x {{ fileDetails?.value.resolution?.height }}</span></p>
+        <p>File Orientation: <span class="font-semibold">{{ fileDetails?.value.orientation?.toUpperCase() }}</span></p>
+    </div>
+    <ng-template #footer>
+        <p-button label="Close" severity="secondary" (onClick)="isShowInfo.set(false)" />
+    </ng-template>
+</p-dialog>
 
 <p-toast />
 <p-confirmdialog />
