--- a/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
+++ b/vcastplay-cms/src/app/pages/assets/asset-list-item/asset-list-item.component.html
@@ -1,7 +1,14 @@
-<div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg p-3 shadow shadow-lg
-    bg-[var(--p-surface-300)] hover:bg-[var(--p-surface-200)] w-full" cdkDrag [cdkDragDisabled]="disableDrag" [cdkDragData]="asset">
-    <h4 class="font-semibold text-sm">{{ asset.name }}</h4>
-    <p class="text-sm">{{ asset.code }}</p>
+<div class="flex flex-col gap-2 border border-[var(--p-surface-300)] rounded-lg shadow shadow-lg h-full w-full
+    bg-[var(--p-surface-300)] hover:bg-[var(--p-surface-200)]" cdkDrag [cdkDragDisabled]="disableDrag" [cdkDragData]="asset">
+    
+    <div class="flex-1 flex flex-col items-center justify-center gap-2 relative group">
+        <app-preview-content class="absolute h-full w-full flex items-center justify-center" 
+            [currentContent]="asset" [showControls]="false" />
+
+        <div class="flex items-end h-full absolute bottom-0 left-0 w-full bg-gradient-to-t from-[var(--p-primary-300)] to-transparent p-2 text-white">
+            <p class="text-sm break-all">{{ asset.name }}</p>
+        </div>
+    </div>
 
     <div class="outline-dashed outline-2 outline-offset-2 outline-gray-400 h-full w-30" *cdkDragPlaceholder></div>
 
