--- a/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
+++ b/vcastplay-cms/src/app/pages/playlist/playlist-details/playlist-details.component.html
@@ -7,7 +7,7 @@
                     <p-button (onClick)="onClickCancel()" icon="pi pi-arrow-left" pTooltip="Back" tooltipPosition="bottom" size="small" text />
                     <p class="text-xl font-semibold">New Playlist</p>
                 </div>
-                <p-button label="Save" icon="pi pi-save" (onClick)="onClickSave($event)" />
+                <p-button label="Save Playlist" icon="pi pi-save" (onClick)="onClickSave($event)" />
             </div>
         </ng-template>
         <div class="grid grid-cols-1 md:grid-cols-12 gap-2 h-full mb-2">
@@ -16,16 +16,16 @@
                 <div class="grid grid-flow-row grid-cols-1 md:grid-cols-12 gap-4">
                     <div class="col-span-1 md:col-span-4">
                         <p-floatlabel variant="in">
+                            <label for="name">Name</label>
                             <input id="name" pInputText formControlName="name" pSize="small"
                                 [ngClass]="{ 'ng-invalid ng-dirty': formControl('name').invalid && formControl('name').touched }" fluid />
-                            <label for="name">Name</label>
                         </p-floatlabel>
                     </div>
                     <div class="col-span-1 md:col-span-8">
                         <p-floatlabel variant="in">
+                            <label for="description">Description</label>
                             <input id="description" pInputText formControlName="description"  pSize="small"
                                 [ngClass]="{ 'ng-invalid ng-dirty': formControl('description').invalid && formControl('description').touched }" fluid />
-                            <label for="description">Description</label>
                         </p-floatlabel>
                     </div>
                 </div>
@@ -33,10 +33,10 @@
                 <!-- Preview Contents -->
                 <div class="relative flex-1 border-2 border-[var(--p-surface-300)] group bg-stone-800 text-white rounded-lg">
                     <div class="flex h-80 md:h-full w-full justify-center items-center">
-                        <div class="transition-all duration-{{currentTransition?.speed}} ease-in-out" [ngClass]="getTransitionClasses()">
+                        <div class="relative transition-all duration-{{currentTransition?.speed}} ease-in-out" [ngClass]="getTransitionClasses()">
                             <ng-container *ngIf="playlistService.currentContent() as currentContent">
-                                <app-preview-content class="flex items-center justify-center h-full" [currentContent]="currentContent" 
-                                    [isPlaying]="isPlaying()" (timeUpdate)="onTimeUpdate($event)" />
+                                <app-preview-content class="absolute h-full w-full flex items-center justify-center" 
+                                    [currentContent]="currentContent" [isPlaying]="isPlaying()" (timeUpdate)="onTimeUpdate($event)" [autoPlay]="true" />
                             </ng-container>
                         </div>
                     </div>
@@ -64,22 +64,22 @@
                                 <p-button pTooltip="Filter" tooltipPosition="bottom" icon="pi pi-filter" />
                             </p-inputgroup-addon>
                         </p-inputgroup>
-                        <p-selectbutton [options]="assetViewModes" [formControl]="assetViewMode" optionLabel="label" optionValue="label" [allowEmpty]="false">
+                        <p-selectbutton [options]="assetViewModes" [formControl]="assetViewModeCtrl" optionLabel="label" optionValue="label" [allowEmpty]="false">
                             <ng-template #item let-item>
                                 <i [class]="item.icon" [pTooltip]="item.label" tooltipPosition="bottom"></i>
                             </ng-template>
                         </p-selectbutton>
                     </div>
-                    <div class="relative flex-1 overflow-y-auto cursor-grab" 
-                        cdkDropList [cdkDropListData]="assets()" cdkDragPreviewContainer="parent" cdkDropListOrientation="horizontal">
-                        <div class="px-3 pb-2 h-50"  [ngClass]="{ 
-                            'grid grid-cols-3 gap-4': assetViewModeSignal() == 'Grid',
+                    <div class="relative flex-1 overflow-y-auto cursor-grab" cdkDropList [cdkDropListData]="assets()" 
+                        cdkDragPreviewContainer="parent" cdkDropListOrientation="horizontal">
+                        <div class="px-3 pb-2"  [ngClass]="{ 
+                            'grid grid-cols-2 gap-5 h-full': assetViewModeSignal() == 'Grid',
                             'flex flex-col gap-2': assetViewModeSignal() == 'List'
                         }">
                             @for (item of filteredAssets(); track $index) {
-                                <app-asset-list-item class="w-full h-full" [asset]="item" />
+                                <app-asset-list-item [ngClass]="{ 'h-30': assetViewModeSignal() == 'List' }" [asset]="item" />
                             } @empty {
-                                <div class="flex items-center justify-center h-full w-full">
+                                <div class="flex items-center justify-center h-full w-full" [ngClass]="{ 'col-span-3 ': assetViewModeSignal() == 'Grid' }">
                                     <p class="text-gray-400 italic">No items found</p>
                                 </div>
                             }
